Tue Apr 15 19:36:42 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h (rb_w32_cmdvector): removed.

	* win32/win32.c (rb_w32_sysinit): use WCHAR version of GetCommandLine()
	  internally.

	* win32/win32.c (w32_cmdvector): renamed from rb_w32_cmdvector.  use
	  WCHAR* instead of char* internally.

	these changes are expected to not changing the behavior yet.

Tue Apr 15 19:26:05 2014  Tanaka Akira  <akr@fsij.org>

	* ext/extmk.rb: Re-generate extmk.mk and dummy makefiles only if
	  really required.
	  This fixes a problem to run multiple test-all concurrently as:
	  make test-all & make test-all & make test-all & ...

Tue Apr 15 12:49:53 2014  Sam Rawlins  <sam.rawlins@gmail.com>

	* enum.c (enum_each_slice, enum_each_cons): make more efficient by
	  allocating less and recycling block argument arrays if possible.
	  [Fixes GH-596]

Mon Apr 14 18:44:45 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): get base addrs in fill_lines to use it
	  with dladdr_fbases introduced at r45563.
	  it didn't get before if the executable is not pie.

Mon Apr 14 18:05:48 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (main_exe_path): support FreeBSD.
	  At least sh, csh, tcsh, bash, and zsh sets realpath of the main
	  executable for dladdr, but gdb doesn't.

Mon Apr 14 17:20:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (umethod_bind): use the ancestor iclass instead of new
	  iclass to get rid of infinite recursion, if the defined module
	  is already included.  [ruby-core:62014] [Bug #9721]

Sun Apr 13 12:46:58 2014  Tanaka Akira  <akr@fsij.org>

	* bignum.c (SIZEOF_BDIGIT): Renamed from SIZEOF_BDIGITS.

	* internal.h: Ditto.

	* marshal.c: Ditto.

	* rational.c: Ditto.

Sun Apr 13 10:18:09 2014  Tanaka Akira  <akr@fsij.org>

	* common.mk: Unused target, $(MKMAIN_CMD), removed.

	* Makefile.in (MKMAIN_CMD): Unused macro removed.

	* win32/Makefile.sub (MKMAIN_CMD): Ditto.
